--- a/index.html
+++ b/index.html
@@ -1,321 +1,177 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel Wars</title>
-    <style>
-        body {
-            font-family: 'Verdana', sans-serif;
-            background-color: #2c2c2c;
-            color: #e0e0e0;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+document.addEventListener('DOMContentLoaded', () => {
+    const canvas = document.getElementById('pixelCanvas');
+    const ctx = canvas.getContext('2d');
+    const overlay = document.getElementById('overlay');
+    const colorPicker = document.getElementById('colorPicker');
+    const countdownDisplay = document.getElementById('countdown');
+    const submitCodeButton = document.getElementById('submitCode');
+    const userInput = document.getElementById('userInput');
+    const wipeCanvasButton = document.getElementById('wipeCanvasButton');
 
-        h1 {
-            margin-top: 20px;
-            color: #ffcc00;
-        }
+    let isCanvasUnlocked = false;
+    let cooldown = false;
+    let pixelsPlaced = 0;
+    const cooldownTime = 300; // 300 seconds (5 minutes)
+    let countdownTimer;
+    const pixelSize = 10;
 
-        #pixelCanvas {
-            border: 1px solid #555;
-            margin-top: 20px;
-            cursor: pointer;
-            background-color: #ffffff;
-        }
+    // Initialize pixel color
+    let currentColor = colorPicker.value;
 
-        #canvasContainer {
-            position: relative;
-        }
+    // Array to keep track of placed pixels
+    const placedPixels = [];
 
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-        }
+    // Get or generate a random access code
+    let randomAccessCode = localStorage.getItem('randomAccessCode');
+    if (!randomAccessCode) {
+        randomAccessCode = Math.random().toString(36).substring(2, 8); // Generates a 6-character random code
+        localStorage.setItem('randomAccessCode', randomAccessCode); // Store the random access code
+    }
+    console.log("Random Access Code:", randomAccessCode); // Debugging log
 
-        #colorOptions {
-            display: flex;
-            gap: 10px;
-            margin-top: 10px;
-            align-items: center;
-        }
+    // Function to save the current state of the canvas to Firebase
+    function saveCanvasState() {
+        set(ref(database, 'canvas/pixels'), placedPixels)
+            .then(() => {
+                console.log('Canvas state saved to Firebase.'); // Debugging log
+            })
+            .catch((error) => {
+                console.error('Error saving canvas state:', error); // Debugging log
+            });
+    }
 
-        #accessSection {
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        #accessSection input {
-            padding: 5px;
-            margin-top: 10px;
-            border-radius: 5px;
-            border: 1px solid #555;
-        }
-
-        #wipeCanvasButton {
-            margin-top: 20px;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            background-color: #ff5555;
-            color: #ffffff;
-            cursor: pointer;
-            display: none; /* Initially hidden */
-        }
-
-        #countdown {
-            color: #ffcc00; /* Countdown text color */
-            margin-left: 10px;
-        }
-
-        #welcomeText {
-            margin-top: 30px;
-            max-width: 600px;
-            text-align: left;
-            font-size: 14px;
-            background-color: #3c3c3c;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            color: #e0e0e0;
-        }
-
-        #welcomeText h2 {
-            margin-bottom: 10px;
-            font-size: 18px;
-            color: #ffcc00;
-        }
-
-        #welcomeText ul {
-            padding-left: 20px;
-        }
-
-        #welcomeText li {
-            margin-bottom: 5px;
-        }
-    </style>
-    <!-- Include Firebase SDK -->
-    <script type="module">
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyANfAj-fw2yJ_1lw75fjZLGCxy6oTWBOJA",
-            authDomain: "pixel-war-deddd.firebaseapp.com",
-            databaseURL: "https://pixel-war-deddd-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "pixel-war-deddd",
-            storageBucket: "pixel-war-deddd.appspot.com",
-            messagingSenderId: "602125749650",
-            appId: "1:602125749650:web:5637bfbdacb77d227a454b",
-            measurementId: "G-D7CEB1DPH5"
-        };
-
-        // Import the Firebase modules
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const canvas = document.getElementById('pixelCanvas');
-            const ctx = canvas.getContext('2d');
-            const overlay = document.getElementById('overlay');
-            const colorPicker = document.getElementById('colorPicker');
-            const countdownDisplay = document.getElementById('countdown');
-            const submitCodeButton = document.getElementById('submitCode');
-            const userInput = document.getElementById('userInput');
-            const wipeCanvasButton = document.getElementById('wipeCanvasButton');
-
-            let isCanvasUnlocked = false;
-            let cooldown = false;
-            let pixelsPlaced = 0;
-            const cooldownTime = 300; // 300 seconds (5 minutes)
-            let countdownTimer;
-            const pixelSize = 10;
-
-            // Initialize pixel color
-            let currentColor = colorPicker.value;
-
-            // Array to keep track of placed pixels
-            const placedPixels = [];
-
-            // Get or generate a random access code
-            let randomAccessCode = localStorage.getItem('randomAccessCode');
-            if (!randomAccessCode) {
-                randomAccessCode = Math.random().toString(36).substring(2, 8); // Generates a 6-character random code
-                localStorage.setItem('randomAccessCode', randomAccessCode); // Store the random access code
-            }
-            console.log("Random Access Code:", randomAccessCode); // Debugging log
-
-            // Function to save the current state of the canvas to Firebase
-            function saveCanvasState() {
-                set(ref(database, 'canvas/pixels'), placedPixels)
-                    .then(() => {
-                        console.log('Canvas state saved to Firebase.'); // Debugging log
-                    })
-                    .catch((error) => {
-                        console.error('Error saving canvas state:', error); // Debugging log
-                    });
-            }
-
-            // Function to load the saved state of the canvas from Firebase
-            function loadCanvasState() {
-                const canvasRef = ref(database, 'canvas/pixels');
-                onValue(canvasRef, (snapshot) => {
-                    const data = snapshot.val();
-                    if (data && data.length > 0) {
-                        ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas first
-                        data.forEach(pixel => {
-                            ctx.fillStyle = pixel.color;
-                            ctx.fillRect(pixel.x, pixel.y, pixelSize, pixelSize);
-                            placedPixels.push(pixel);
-                        });
-                        console.log('Loaded canvas state from Firebase.'); // Debugging log
-                    }
+    // Function to load the saved state of the canvas from Firebase
+    function loadCanvasState() {
+        const canvasRef = ref(database, 'canvas/pixels');
+        onValue(canvasRef, (snapshot) => {
+            const data = snapshot.val();
+            if (data && data.length > 0) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas first
+                data.forEach(pixel => {
+                    ctx.fillStyle = pixel.color;
+                    ctx.fillRect(pixel.x, pixel.y, pixelSize, pixelSize);
+                    placedPixels.push(pixel);
                 });
+                console.log('Loaded canvas state from Firebase.'); // Debugging log
             }
-
-            // Function to place a pixel on the canvas
-            function placePixel(x, y) {
-                if (isCanvasUnlocked && !cooldown) {
-                    const gridX = Math.floor(x / pixelSize) * pixelSize;
-                    const gridY = Math.floor(y / pixelSize) * pixelSize;
-
-                    // Check if the pixel position is already occupied
-                    if (!placedPixels.some(pixel => pixel.x === gridX && pixel.y === gridY)) {
-                        const newPixel = {
-                            x: gridX,
-                            y: gridY,
-                            color: currentColor
-                        };
-                        ctx.fillStyle = newPixel.color;
-                        ctx.fillRect(gridX, gridY, pixelSize, pixelSize);
-                        placedPixels.push(newPixel);
-
-                        saveCanvasState(); // Save the pixel placement to Firebase
-
-                        pixelsPlaced++;
-                        console.log('Pixels Placed:', pixelsPlaced); // Debugging log
-
-                        if (pixelsPlaced === 1) {
-                            startCooldown(); // Start cooldown when the 1st pixel is placed
-                        }
-                    }
-                }
-            }
-
-            // Function to start the cooldown
-            function startCooldown(timeLeft = cooldownTime) {
-                cooldown = true;
-                let secondsLeft = timeLeft;
-
-                countdownTimer = setInterval(() => {
-                    secondsLeft--;
-                    updateCountdownDisplay(secondsLeft);
-
-                    if (secondsLeft <= 0) {
-                        clearInterval(countdownTimer);
-                        cooldown = false;
-                        countdownDisplay.textContent = "Cooldown: 0:00"; // Reset display
-                    }
-                }, 1000);
-            }
-
-            // Function to update the countdown display
-            function updateCountdownDisplay(secondsLeft) {
-                const minutes = Math.floor(secondsLeft / 60);
-                const seconds = secondsLeft % 60;
-                countdownDisplay.textContent = `Cooldown: ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-            }
-
-            // Event listener for mouse clicks on the canvas
-            canvas.addEventListener('click', (event) => {
-                const rect = canvas.getBoundingClientRect();
-                const x = event.clientX - rect.left;
-                const y = event.clientY - rect.top;
-                placePixel(x, y);
-            });
-
-            // Event listener for the color picker
-            colorPicker.addEventListener('input', (event) => {
-                currentColor = event.target.value;
-            });
-
-            // Event listener for the access code submission
-            submitCodeButton.addEventListener('click', () => {
-                const inputCode = userInput.value;
-                if (inputCode === "Itsameamario1" || inputCode === randomAccessCode) {
-                    isCanvasUnlocked = true;
-                    overlay.style.display = 'none';
-                    wipeCanvasButton.style.display = 'block'; // Show the wipe button after unlocking
-                    loadCanvasState(); // Load the previous state of the canvas
-                    console.log('Canvas unlocked!'); // Debugging log
-                } else {
-                    alert('Invalid access code. Please try again.');
-                }
-                userInput.value = ''; // Clear the input field after submission
-            });
-
-            // Event listener for the wipe canvas button
-            wipeCanvasButton.addEventListener('click', () => {
-                if (confirm('Are you sure you want to wipe the canvas? This action cannot be undone!')) {
-                    ctx.clearRect(0, 0, canvas.width, canvas.height);
-                    placedPixels.length = 0; // Clear the placed pixels array
-                    saveCanvasState(); // Save the cleared state to Firebase
-                }
-            });
-
-            // Load the canvas state when the page loads
-            loadCanvasState();
         });
-    </script>
-</head>
-<body>
-    <h1>Pixel Wars</h1>
-    <div id="canvasContainer">
-        <canvas id="pixelCanvas" width="500" height="500"></canvas>
-        <div class="overlay" id="overlay">Enter Access Code to Unlock Canvas</div>
-    </div>
-    
-    <div id="colorOptions">
-        <input type="color" id="colorPicker" value="#000000">
-        <div id="countdown">Cooldown: 0:00</div>
-    </div>
+    }
 
-    <div id="accessSection">
-        <label for="userInput">Enter Access Code:</label>
-        <input type="text" id="userInput" placeholder="Enter your code here">
-        <button id="submitCode">Submit</button>
-    </div>
+    // Function to place a pixel on the canvas
+    function placePixel(x, y) {
+        if (isCanvasUnlocked && !cooldown) {
+            const gridX = Math.floor(x / pixelSize) * pixelSize;
+            const gridY = Math.floor(y / pixelSize) * pixelSize;
 
-    <button id="wipeCanvasButton">Wipe Canvas</button>
+            // Check if the pixel position is already occupied
+            if (!placedPixels.some(pixel => pixel.x === gridX && pixel.y === gridY)) {
+                const newPixel = {
+                    x: gridX,
+                    y: gridY,
+                    color: currentColor
+                };
+                ctx.fillStyle = newPixel.color;
+                ctx.fillRect(gridX, gridY, pixelSize, pixelSize);
+                placedPixels.push(newPixel);
 
-    <div id="welcomeText">
-        <h2>Welcome to Pixel Wars!</h2>
-        <p>This space is all about collaboration and creativity. Go wild, be quirky, or team up with others to create something amazing. The image you create here will become our server banner at the end of every month. You've got one pixel every 5 minutes, so make it count!</p>
-        <p>Here are some quick tips to get you started:</p>
-        <ul>
-            <li>Click on the canvas to place a pixel.</li>
-            <li>Middle-click on the canvas to quickly pick a color that’s already been placed.</li>
-            <li>You can replace any pixel, no matter who placed it there!</li>
-        </ul>
-        <p>Game on and happy pixeling!</p>
-    </div>
-</body>
-</html>
+                saveCanvasState(); // Save the pixel placement to Firebase
+
+                pixelsPlaced++;
+                console.log('Pixels Placed:', pixelsPlaced); // Debugging log
+
+                if (pixelsPlaced === 1) {
+                    startCooldown(); // Start cooldown when the 1st pixel is placed
+                }
+            }
+        }
+    }
+
+    // Function to start the cooldown
+    function startCooldown(timeLeft = cooldownTime) {
+        cooldown = true;
+        let secondsLeft = timeLeft;
+
+        countdownTimer = setInterval(() => {
+            secondsLeft--;
+            updateCountdownDisplay(secondsLeft);
+
+            if (secondsLeft <= 0) {
+                clearInterval(countdownTimer);
+                cooldown = false;
+                countdownDisplay.textContent = "Cooldown: 0:00"; // Reset display
+            }
+        }, 1000);
+    }
+
+    // Function to update the countdown display
+    function updateCountdownDisplay(secondsLeft) {
+        const minutes = Math.floor(secondsLeft / 60);
+        const seconds = secondsLeft % 60;
+        countdownDisplay.textContent = `Cooldown: ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+    }
+
+    // Event listener for mouse clicks on the canvas
+    canvas.addEventListener('click', (event) => {
+        const rect = canvas.getBoundingClientRect();
+        const x = event.clientX - rect.left;
+        const y = event.clientY - rect.top;
+        placePixel(x, y);
+    });
+
+    // Event listener for middle-click (color picker)
+    canvas.addEventListener('auxclick', (event) => {
+        if (event.button === 1) { // Middle-click
+            const rect = canvas.getBoundingClientRect();
+            const x = event.clientX - rect.left;
+            const y = event.clientY - rect.top;
+            const gridX = Math.floor(x / pixelSize) * pixelSize;
+            const gridY = Math.floor(y / pixelSize) * pixelSize;
+
+            // Find the pixel at the clicked position
+            const clickedPixel = placedPixels.find(pixel => pixel.x === gridX && pixel.y === gridY);
+            if (clickedPixel) {
+                colorPicker.value = clickedPixel.color; // Set the color picker to the clicked pixel's color
+                currentColor = clickedPixel.color;
+            }
+        }
+    });
+
+    // Event listener for the color picker
+    colorPicker.addEventListener('input', (event) => {
+        currentColor = event.target.value;
+    });
+
+    // Event listener for the access code submission
+    submitCodeButton.addEventListener('click', () => {
+        const inputCode = userInput.value;
+        const adminCode = "Itsameamario1";
+
+        // Check access code without revealing admin code in the console
+        if (inputCode === adminCode || inputCode === randomAccessCode) {
+            isCanvasUnlocked = true;
+            overlay.style.display = 'none';
+
+            // Only show "Wipe Canvas" button to admin
+            if (inputCode === adminCode) {
+                wipeCanvasButton.style.display = 'block'; // Show the wipe button for admin
+            }
+            loadCanvasState(); // Load the previous state of the canvas
+            console.log('Canvas unlocked!'); // Debugging log
+        } else {
+            alert('Invalid access code. Please try again.');
+        }
+        userInput.value = ''; // Clear the input field after submission
+    });
+
+    // Event listener for the wipe canvas button
+    wipeCanvasButton.addEventListener('click', () => {
+        if (confirm('Are you sure you want to wipe the canvas? This action cannot be undone!')) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            placedPixels.length = 0; // Clear the placed pixels array
+            saveCanvasState(); // Save the cleared state to Firebase
+        }
+    });
+
+    // Load the canvas state when the page loads
+    loadCanvasState();
+});
