--- a/index.html
+++ b/index.html
@@ -301,11 +301,12 @@
     <button id="wipeCanvasButton">Clear Canvas</button>
     <div id="welcomeText">
         <h2>Welcome to Pixel Wars!</h2>
-        <ul>
-            <li>Join the battle by placing pixels of your chosen color.</li>
-            <li>There is a cooldown period after each pixel placement.</li>
-            <li>Admins can clear the canvas using the admin code.</li>
-        </ul>
+    <ul>
+        <li>Every 5 minutes, you get to unleash your creativity with one pixel. Make it count!</li>
+        <li>Be as wild and imaginative as you want—team up with friends or go solo to make your mark!</li>
+        <li>Need a quick color? Just middle-click on the canvas to grab a color of the pixel thats already placed down!</li>
+    </ul>
+    <p>Get ready to battle it out with colors. Game on and happy pixeling!</p>
     </div>
 </body>
 </html>
