Updated password system and increased canvas size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>Pixel Wars</h1>
-  <canvas id="canvas" width="128" height="128"></canvas>
+  <input type="password" id="passwordInput" placeholder="Enter password">
+  <button id="submitPassword">Submit</button>
+  <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
+  <canvas id="canvas" width="400" height="400"></canvas>
   <div id="cooldown-timer">You can place a pixel now!</div>
 
   <script src="script.js"></script>
