--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   
   <canvas id="canvas" width="400" height="400"></canvas>
   
-  <input type="color" id="colorPicker" value="#000000"> <!-- Color Picker -->
+  <div>
+    <input type="color" id="colorPicker" value="#000000"> <!-- Color Picker -->
+  </div>
   
-  <input type="password" id="passwordInput" placeholder="Enter password">
-  <button id="submitPassword">Submit</button>
-  <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
+  <div>
+    <input type="password" id="passwordInput" placeholder="Enter password">
+    <button id="submitPassword">Submit</button>
+    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
+  </div>
   
   <div id="cooldown-timer">You can place a pixel now!</div>
 
