Updated canvas, color picker, and password functionality

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   
   <div>
     <input type="color" id="colorPicker" value="#000000"> <!-- Color Picker -->
+    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button> <!-- Clear Canvas button -->
   </div>
   
   <div>
     <input type="password" id="passwordInput" placeholder="Enter password">
     <button id="submitPassword">Submit</button>
-    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
   </div>
   
   <div id="cooldown-timer">You can place a pixel now!</div>
