Adjusted positioning for clear canvas button, fixed pixel registration

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   
   <canvas id="canvas" width="400" height="400"></canvas>
   
-  <div style="margin-top: 10px;"> <!-- Added margin for spacing -->
+  <div style="margin-top: 10px;">
     <input type="color" id="colorPicker" value="#000000"> <!-- Color Picker -->
-    <button id="clearCanvasButton" style="display: none; margin-left: 10px;">Clear Canvas</button> <!-- Clear Canvas button -->
   </div>
   
-  <div style="margin-top: 10px;"> <!-- Added margin for spacing -->
+  <div style="margin-top: 10px;">
+    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button> <!-- Clear Canvas button -->
+  </div>
+
+  <div style="margin-top: 10px;">
     <input type="password" id="passwordInput" placeholder="Enter password">
     <button id="submitPassword">Submit</button>
   </div>
