Fixed pixel size and timer functionality

--- a/index.html
+++ b/index.html
@@ -8,20 +8,10 @@
 </head>
 <body>
   <h1>Pixel Wars</h1>
-  
   <canvas id="canvas" width="400" height="400"></canvas>
-  
-  <div style="margin-top: 10px;">
-    <input type="color" id="colorPicker" value="#000000"> <!-- Color Picker -->
-    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button> <!-- Clear Canvas button -->
-  </div>
-  
-  <div style="margin-top: 10px;">
-    <input type="password" id="passwordInput" placeholder="Enter password">
-    <button id="submitPassword">Submit</button>
-  </div>
-  
+  <input type="color" id="colorPicker" value="#000000">
   <div id="cooldown-timer">You can place a pixel now!</div>
+  <button id="clearCanvasButton">Clear Canvas</button>
 
   <script src="script.js"></script>
 </body>
