Fixed cooldown timer and layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <h1>Pixel Wars</h1>
+  
   <canvas id="canvas" width="400" height="400"></canvas>
   <input type="color" id="colorPicker" value="#000000">
+  
   <div id="cooldown-timer">You can place a pixel now!</div>
-  <button id="clearCanvasButton">Clear Canvas</button>
+  
+  <input type="password" id="passwordInput" placeholder="Enter password">
+  <button id="submitPassword">Submit</button>
+  <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
 
   <script src="script.js"></script>
 </body>
