Fix stacking issue: ensure color picker, password, and clear canvas are vertical

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <h1>Pixel Wars</h1>
   
-  <!-- Canvas section -->
+  <!-- Canvas -->
   <canvas id="canvas" width="400" height="400"></canvas>
   
-  <!-- Controls section for color picker, password, etc. -->
+  <!-- Controls section for color picker, password input, and clear canvas button -->
   <div id="controls">
-    <input type="color" id="colorPicker" value="#000000">
-    <input type="password" id="passwordInput" placeholder="Enter password">
-    <button id="submitPassword">Submit</button>
-    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
+    <input type="color" id="colorPicker" value="#000000"> <!-- Color picker -->
+    <input type="password" id="passwordInput" placeholder="Enter password"> <!-- Password -->
+    <button id="submitPassword">Submit</button> <!-- Submit Password -->
+    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button> <!-- Clear Canvas button (for admin) -->
   </div>
   
   <!-- Cooldown Timer -->
