--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <p>Game on and happy pixeling!</p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Ensure this is at the bottom -->
 </body>
 </html>
