Updated HTML to use module script for Firebase

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pixel Wars</title>
   <link rel="stylesheet" href="style.css">
-  
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
-
-  <!-- CryptoJS for encryption -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <!-- Add Firebase SDKs here -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 </head>
 <body>
   <h1>Pixel Wars</h1>
@@ -37,6 +33,7 @@
     <p>Game on and happy pixeling!</p>
   </div>
 
-  <script src="script.js"></script> <!-- Your main JavaScript file -->
+  <!-- Update script to use module -->
+  <script type="module" src="script.js"></script>
 </body>
 </html>
