Updated Firebase SDK imports and script structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pixel Wars</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-  <!-- Add Firebase SDKs here -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 </head>
@@ -33,7 +33,7 @@
     <p>Game on and happy pixeling!</p>
   </div>
 
-  <!-- Update script to use module -->
+  <!-- Ensure the script is loaded as a module -->
   <script type="module" src="script.js"></script>
 </body>
 </html>
