Updated Firebase SDK imports and script structure

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <title>Pixel Wars</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 </head>
 <body>
   <h1>Pixel Wars</h1>
@@ -33,7 +30,7 @@
     <p>Game on and happy pixeling!</p>
   </div>
 
-  <!-- Ensure the script is loaded as a module -->
+  <!-- Include your script as a module -->
   <script type="module" src="script.js"></script>
 </body>
 </html>
